Update AUTHORS file with new contributors

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
 # These individuals contributed to the hbnb project in this repository 
 
-Ezra Nobrega <ezra.nobrega@outlook.com>
-Justin Majetich <justinmajetich@gmail.com>
+Benjamin Kettey-Tagoe <b.kettey-ta@alustudent.com>
+Mitchell Burare <m.burare@alustudent.com>
